--- a/raju.html
+++ b/raju.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Raju</h1>
-    <h1>Raju</h1>
-    <h1>Raju</h1>
+   <h1>cmd commands</h1>
 </body>
 </html>
