--- a/raju.html
+++ b/raju.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- ctrl + shift + ` -->
+     <!-- in side the terminal in git-bash -->
    <h1>cmd commands</h1>
 </body>
 </html>
